--- a/index.html
+++ b/index.html
@@ -3,23 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <title>XPANOL Video Grid - Elite v2</title>
+  <title>XPANOL Video Grid</title>
   <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
   <style>
-    :root {
-      --brand-color: #f8ac10;
-    }
-
+    :root { --brand-color: #f8ac10; }
     * { box-sizing: border-box; }
     html, body {
       margin: 0; padding: 0;
       width: 100%; height: 100%;
       background: #000;
-      font-family: 'Special Elite', system-ui, serif;
+      font-family: 'Special Elite', cursive;
       overflow: hidden;
     }
 
-    /* --- GRID VIEW --- */
+    /* GRID VIEW */
     .video-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -62,7 +59,7 @@
       border-bottom: 12px solid transparent;
     }
 
-    /* --- FOCUS VIEW --- */
+    /* FOCUS VIEW */
     #video-focus-overlay {
       position: fixed;
       top: 0; left: 0;
@@ -93,51 +90,36 @@
       cursor: pointer;
     }
 
-    /* Przycisk X w hoverze nad wideo */
     .hover-close {
       position: absolute;
-      top: 10px;
-      right: 10px;
-      width: 30px;
-      height: 30px;
+      top: 10px; right: 10px;
+      width: 35px; height: 35px;
       background: rgba(0,0,0,0.6);
-      border: 1px solid var(--brand-color);
+      border: 2px solid var(--brand-color);
       color: var(--brand-color);
       border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-family: Arial, sans-serif; /* Dla prostego X */
-      font-size: 18px;
+      display: flex; justify-content: center; align-items: center;
+      font-size: 20px; font-weight: bold;
       cursor: pointer;
       opacity: 0;
       transition: opacity 0.3s;
       z-index: 1010;
     }
 
-    .video-container:hover .hover-close {
-      opacity: 1;
-    }
+    .video-container:hover .hover-close { opacity: 1; }
 
     .progress-container {
-      width: 100%;
-      height: 6px;
+      width: 100%; height: 6px;
       background: rgba(255, 255, 255, 0.2);
       margin-top: 10px;
       cursor: pointer;
     }
 
-    #progress-bar {
-      width: 0%;
-      height: 100%;
-      background: var(--brand-color);
-    }
+    #progress-bar { width: 0%; height: 100%; background: var(--brand-color); }
 
     .controls-panel {
-      display: flex;
-      gap: 20px;
-      margin-top: 25px;
-      align-items: center;
+      display: flex; gap: 20px;
+      margin-top: 25px; align-items: center;
     }
 
     .control-btn {
@@ -147,38 +129,29 @@
       padding: 10px 20px;
       border-radius: 5px;
       cursor: pointer;
-      font-family: 'Special Elite', serif;
+      font-family: 'Special Elite', cursive;
       font-size: 18px;
-      transition: all 0.2s;
     }
 
-    .control-btn:hover {
-      background: var(--brand-color);
-      color: #000;
-    }
+    .control-btn:hover { background: var(--brand-color); color: #000; }
   </style>
 </head>
 <body>
 
 <div class="video-grid">
-  <div class="video-box" onclick="zoomVideo(this)"><video preload="metadata" src="videos/video1.mp4#t=0.1"></video><div class="grid-play-btn"></div></div>
-  <div class="video-box" onclick="zoomVideo(this)"><video preload="metadata" src="videos/video2.mp4#t=0.1"></video><div class="grid-play-btn"></div></div>
-  <div class="video-box" onclick="zoomVideo(this)"><video preload="metadata" src="videos/video3.mp4#t=0.1"></video><div class="grid-play-btn"></div></div>
-  <div class="video-box" onclick="zoomVideo(this)"><video preload="metadata" src="videos/video4.mp4#t=0.1"></video><div class="grid-play-btn"></div></div>
-  <div class="video-box" onclick="zoomVideo(this)"><video preload="metadata" src="videos/video5.mp4#t=0.1"></video><div class="grid-play-btn"></div></div>
-  <div class="video-box" onclick="zoomVideo(this)"><video preload="metadata" src="videos/video6.mp4#t=0.1"></video><div class="grid-play-btn"></div></div>
+  <div class="video-box" onclick="zoomVideo(this)"><video preload="metadata" src="https://raw.githubusercontent.com/xpanol/PALABRASRAPIDAS/main/videos/video1.mp4#t=0.1"></video><div class="grid-play-btn"></div></div>
+  <div class="video-box" onclick="zoomVideo(this)"><video preload="metadata" src="https://raw.githubusercontent.com/xpanol/PALABRASRAPIDAS/main/videos/video2.mp4#t=0.1"></video><div class="grid-play-btn"></div></div>
+  <div class="video-box" onclick="zoomVideo(this)"><video preload="metadata" src="https://raw.githubusercontent.com/xpanol/PALABRASRAPIDAS/main/videos/video3.mp4#t=0.1"></video><div class="grid-play-btn"></div></div>
+  <div class="video-box" onclick="zoomVideo(this)"><video preload="metadata" src="https://raw.githubusercontent.com/xpanol/PALABRASRAPIDAS/main/videos/video4.mp4#t=0.1"></video><div class="grid-play-btn"></div></div>
+  <div class="video-box" onclick="zoomVideo(this)"><video preload="metadata" src="https://raw.githubusercontent.com/xpanol/PALABRASRAPIDAS/main/videos/video5.mp4#t=0.1"></video><div class="grid-play-btn"></div></div>
+  <div class="video-box" onclick="zoomVideo(this)"><video preload="metadata" src="https://raw.githubusercontent.com/xpanol/PALABRASRAPIDAS/main/videos/video6.mp4#t=0.1"></video><div class="grid-play-btn"></div></div>
 </div>
 
 <div id="video-focus-overlay">
   <div class="video-container">
     <div class="hover-close" onclick="closeVideo(event)">✕</div>
-    
     <video id="focused-video" playsinline loop onclick="togglePlay()"></video>
-    
-    <div class="progress-container" onclick="seek(event)">
-      <div id="progress-bar"></div>
-    </div>
-
+    <div class="progress-container" onclick="seek(event)"><div id="progress-bar"></div></div>
     <div class="controls-panel">
       <button class="control-btn" onclick="skip(-3)">&lt;&lt;</button>
       <button class="control-btn" id="play-pause-btn" onclick="togglePlay()">PAUSE</button>
@@ -213,18 +186,11 @@
   }
 
   function togglePlay() {
-    if (focusedVideo.paused) {
-      focusedVideo.play();
-      playBtn.innerText = "PAUSE";
-    } else {
-      focusedVideo.pause();
-      playBtn.innerText = "PLAY";
-    }
+    if (focusedVideo.paused) { focusedVideo.play(); playBtn.innerText = "PAUSE"; }
+    else { focusedVideo.pause(); playBtn.innerText = "PLAY"; }
   }
 
-  function skip(seconds) {
-    focusedVideo.currentTime += seconds;
-  }
+  function skip(seconds) { focusedVideo.currentTime += seconds; }
 
   focusedVideo.ontimeupdate = function() {
     if(focusedVideo.duration) {
@@ -236,13 +202,10 @@
   function seek(e) {
     const rect = e.currentTarget.getBoundingClientRect();
     const x = e.clientX - rect.left;
-    const seekTime = (x / rect.width) * focusedVideo.duration;
-    focusedVideo.currentTime = seekTime;
+    focusedVideo.currentTime = (x / rect.width) * focusedVideo.duration;
   }
 
-  overlay.onclick = function(e) {
-    if (e.target === overlay) closeVideo();
-  };
+  overlay.onclick = function(e) { if (e.target === overlay) closeVideo(); };
 </script>
 
 </body>
